--- a/ui-app/src/app/app.component.html
+++ b/ui-app/src/app/app.component.html
@@ -6,11 +6,11 @@
   <ul class="navbar-nav mr-auto"></ul>
   <span>
     <a class="btn btn-outline-primary btn-sm m-1" routerLink="auth">Sign-In</a>
-    <button class="btn btn-outline-info btn-sm m-1" routerLink="register">Sign-Up</button>
+    <button class="btn btn-outline-warning btn-sm m-1" routerLink="register">Sign-Up</button>
 
     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
       <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-sm btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button id="btnGroupDrop1" type="button" class="btn btn-sm btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           User Name
         </button>
         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
