--- a/ui-app/src/app/auth/auth.component.html
+++ b/ui-app/src/app/auth/auth.component.html
@@ -1,24 +1,39 @@
-<div class="container" style="padding-top: 150px;">
-  <div class="card shadow-lg p-3">
-    <div class="card-body">
-      <h5>LOGIN</h5>
-      <hr>
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<div class="container" style="padding-top: 200px; width: 800px">
+
+  <div class="card shadow-lg p-0">
+    <div class="card-body p-0">
+      <div class="row">
+        <div class="col-2 bg-primary">
+          &nbsp;
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+        <div class="col-10 p-4">
+          <h5>Sign-In Form</h5>
+          <hr>
+          <form class="form" [formGroup]="loginForm">
+            <div class="form-group pr-4">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group pr-4">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="form-group form-check pr-4">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <div class="form-group pr-4">
+            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+              <span class="float-right">
+                <a class="btn btn-outline-warning btn-sm" routerLink="/register">Sign-Up</a>
+              </span>
+            </div>
+          </form>
         </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+
+      </div>
+
     </div>
   </div>
 </div>
