--- a/ui-app/src/app/register/register.component.html
+++ b/ui-app/src/app/register/register.component.html
@@ -7,22 +7,48 @@
           &nbsp;
         </div>
         <div class="col-10 p-4">
-          <h5>SIGN UP</h5>
-          <hr>
+          <div class="alert alert-warning" role="alert">
+            SIGN UP
+          </div>
           <form>
             <div class="row">
+              <div class="col-12">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">Program <small class="text-danger">*</small></label><br>
+                  <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="customRadioInline1">SMARTSAT</label>
+                  </div>
+                  <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="customRadioInline2">Freshman Program</label>
+                  </div>
+                  <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="customRadioInline3" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="customRadioInline3">Sophomore Program</label>
+                  </div>
+                  <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="customRadioInline4" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="customRadioInline4">Junior Program</label>
+                  </div>
+                  <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="customRadioInline5" name="customRadioInline1" class="custom-control-input">
+                    <label class="custom-control-label" for="customRadioInline5">Senior Program</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
               <div class="col-6">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">First Name <small class="text-danger">*</small></label>
+                  <input type="text" class="form-control form-control-sm" id="firstName">
                 </div>
               </div>
               <div class="col-6">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">Last Name <small class="text-danger">*</small></label>
+                  <input type="text" class="form-control form-control-sm" id="lastName">
                 </div>
               </div>
             </div>
@@ -30,63 +56,129 @@
               <div class="col-6">
                 <div class="form-group pr-4">
                   <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
                   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-3">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">Age <small class="text-danger">*</small></label>
+                  <input type="text" class="form-control form-control-sm" id="firstName">
                 </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-6">
+              <div class="col-3">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
-              </div>
-              <div class="col-6">
-                <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">Student Grade in School <small class="text-danger">*</small></label>
+                  <input type="text" class="form-control form-control-sm" id="lastName">
+                  <small id="emailHelp" class="form-text text-muted">(2020-21 school year)</small>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-6">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">Password <small class="text-danger">*</small></label>
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
               </div>
               <div class="col-6">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">Confirm Password <small class="text-danger">*</small></label>
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+              </div>
+            </div>
+            <div class="alert alert-warning" role="alert">
+              PARENT DETAILS
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">Parent First Name <small class="text-danger">*</small></label>
+                  <input type="text" class="form-control form-control-sm" id="firstName">
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">Parent Last Name <small class="text-danger">*</small></label>
+                  <input type="text" class="form-control form-control-sm" id="lastName">
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-6">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">Phone Number <small class="text-danger">*</small></label>
+                  <input type="text" class="form-control form-control-sm" id="firstName">
+                </div>
+              </div>
+              <div class="col-6">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">Address Line #1</label>
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
               </div>
               <div class="col-6">
                 <div class="form-group pr-4">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  <label for="exampleInputEmail1">Address Line #2</label>
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">City</label>
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">State</label>
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">Country</label>
+                  <select class="custom-select" id="validationTooltip04" required>
+                    <option selected disabled value="">Choose...</option>
+                    <option>...</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">Zip / Postal code</label>
+                  <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="exampleInputEmail1">How did you hear about us?</label>
+                  <select class="custom-select" id="validationTooltip04" required>
+                    <option selected disabled value="">Choose...</option>
+                    <option value="Google">Google</option>
+                    <option value="Email">Email</option>
+                    <option value="Facebook">Facebook</option>
+                    <option value="Website">Website</option>
+                    <option value="From a friend">From a friend</option>
+                    <option value="Other">Other</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group pr-4">
+                  <label for="details">Details</label><br>
+                  <textarea name="details" id="details" cols="45" rows="3"></textarea>
                 </div>
               </div>
             </div>
@@ -101,4 +193,5 @@
       </div>
     </div>
   </div>
+  <p>&nbsp;</p>
 </div>
