--- a/ui-app/src/app/register/register.component.html
+++ b/ui-app/src/app/register/register.component.html
@@ -178,7 +178,7 @@
               <div class="col-6">
                 <div class="form-group pr-4">
                   <label for="details">Details</label><br>
-                  <textarea name="details" id="details" cols="45" rows="3"></textarea>
+                  <textarea class="form-control form-control-sm" name="details" id="details" rows="3"></textarea>
                 </div>
               </div>
             </div>
