--- a/ui-app/src/app/auth/auth.component.html
+++ b/ui-app/src/app/auth/auth.component.html
@@ -1,53 +1,1 @@
-<div class="container" style="padding-top: 200px; width: 800px">
-
-  <div class="card shadow-lg p-0">
-    <div class="card-body p-0">
-      <div class="row">
-        <div class="col-2 bg-primary">
-          &nbsp;
-        </div>
-        <div class="col-10 p-4">
-          <div class="alert alert-primary" role="alert">
-            Sign-In Form
-          </div>
-          <form class="form" [formGroup]="loginForm">
-            <div class="form-group pr-4">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" formControlName="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div *ngIf="loginForm.touched && loginForm.get('email').hasError('required')">
-                <small class="text-danger">please provide a valid email!</small>
-              </div>
-              <div *ngIf="loginForm.get('email').touched && loginForm.get('email').hasError('email')">
-                <small class="text-danger">Invalid Email!</small>
-              </div>
-            </div>
-            <div class="form-group pr-4">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" formControlName="password" class="form-control" id="exampleInputPassword1">
-              <div *ngIf="loginForm.get('password').touched && loginForm.get('password').hasError('required')">
-                <small class="text-danger">please provide a valid password!</small>
-              </div>
-
-            </div>
-            <div class="form-group form-check pr-4">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Remember Me (to be developed)</label>
-            </div>
-            <div class="form-group pr-4">
-            <button type="submit" class="btn btn-primary btn-sm" [disabled]="loginForm.invalid">
-              <span *ngIf="loginForm.valid">Sign-In</span>
-              <span *ngIf="loginForm.dirty && loginForm.invalid">Invalid form</span>
-              <span *ngIf="!loginForm.dirty">Enter all</span>
-            </button>
-              <span class="float-right">
-                <a class="btn btn-outline-warning btn-sm" routerLink="/register">Sign-Up</a>
-              </span>
-            </div>
-          </form>
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-</div>
+<h2>Auth Module</h2>
