--- a/ui-app/src/app/layout/header/header.component.html
+++ b/ui-app/src/app/layout/header/header.component.html
@@ -63,10 +63,13 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link text-white" href="#">Home</a>
+        <a class="nav-link text-white" routerLink="/student">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">My Course</a>
+        <a class="nav-link text-white" routerLink="/student/my-courses">My Courses</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/student/my-classes">Classes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="#">Practice Tests</a>
